# germinal

./: .gitignore  ARCHITECTURE.md  CAPABILITY_GAPS.md  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
cli/: germctl.py
orchestrator/: .env.example  ARCHITECTURE.md  CAPABILITY_GAPS.md  __main__.py  config.yaml  main.py  main_interactive.py  main_loop.py  push_event.py  pytest.ini  requirements.txt
orchestrator/adapters/: network.py  timer.py
orchestrator/agents/: base_prompt.py  task_agent.py
orchestrator/core/: agent_invoker.py  approval_gate.py  config.py  context_manager.py  event_queue.py  router.py  security.py
orchestrator/scripts/: halt_oom.sh  run_tests.sh  setup.sh
orchestrator/storage/: db.py  schema.sql
orchestrator/tests/: README.md  test_agent_invoker.py  test_code_quality_tools.py  test_context_manager.py  test_event_queue.py  test_pydantic_contracts.py  test_router.py  test_tool_registry.py
orchestrator/tests/integration/: test_end_to_end.py  test_http_e2e.py  test_tool_usage_e2e.py
orchestrator/tools/: code_quality.py  content_access.py  filesystem.py  git.py  notify.py  registry.py  shell.py  system.py  tasks.py
tests/: test_agent_invoker.py  test_code_quality_tools.py  test_context_manager.py  test_event_queue.py  test_pydantic_contracts.py  test_router.py  test_security.py  test_system_tools.py  test_tool_registry.py
tests/integration/: test_end_to_end.py  test_http_e2e.py  test_prompt_loop.py  test_tool_usage_e2e.py
