[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "germinal"
version = "0.1.0"
description = "Home-hosted agentic AI orchestration system"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "instructor[litellm]>=1.0.0",
    "litellm>=1.40.0",
    "llm",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
germ = "orchestrator.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]
# Include config.yaml as package data so importlib.resources can locate the
# bundled default and copy it to ~/.config/germinal/ on first run.
artifacts = ["orchestrator/config.yaml"]

[tool.pytest.ini_options]
# asyncio_mode=auto makes every async test function run in the asyncio event
# loop automatically, without needing @pytest.mark.asyncio on each one.
asyncio_mode = "auto"
